Maintenance update + encryptPnl hotfix